force-app/main/default/objects/Legal_Custody__c/fields/Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 2 OR 3 OR 4 OR 5) AND ((6 AND 7) OR (8 AND 9)))</booleanFilter>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>1</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>2</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>3</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>4</value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>5</value>
        </filterItems>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Investigation__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Custodys (Child Name)</relationshipLabel>
    <relationshipName>Legal_Custodys1</relationshipName>
    <type>Lookup</type>
</CustomField>