force-app/main/default/objects/Legal_Custody__c/fields/Extension_Code__c.field-meta.xml
<CustomField>
    <fullName>Extension_Code__c</fullName>
    <label>Ext</label>
    <type>Phone</type>
</CustomField>