force-app/main/default/objects/Legal_Custody__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>