force-app/main/default/objects/Legal_Custody__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Legal Custodys</relationshipLabel>
    <relationshipName>Legal_Custodys</relationshipName>
    <type>Lookup</type>
</CustomField>