force-app/main/default/objects/Legal_Custody__c/fields/Legal_Custody__c.field-meta.xml
<CustomField>
    <fullName>Legal_Custody__c</fullName>
    <label>Legal Custody</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Committed to DSS</fullName>
            </value>
            <value>
                <fullName>Co-Committed to DSS and DDA</fullName>
            </value>
            <value>
                <fullName>Co-Committed to DSS and DHMH</fullName>
            </value>
            <value>
                <fullName>Co-Committed to DSS and DJS</fullName>
            </value>
            <value>
                <fullName>Co-Committed to DSS, DJS, and DHMH</fullName>
            </value>
            <value>
                <fullName>DJJ and DHMH</fullName>
            </value>
            <value>
                <fullName>Committed to Another State Agency</fullName>
            </value>
            <value>
                <fullName>Guardianship to DSS</fullName>
            </value>
            <value>
                <fullName>Caretaker (Non Relative) Custody</fullName>
            </value>
            <value>
                <fullName>Caretaker Guardianship</fullName>
            </value>
            <value>
                <fullName>Custody to Relative</fullName>
            </value>
            <value>
                <fullName>Custody to Mother</fullName>
            </value>
            <value>
                <fullName>Custody to Father</fullName>
            </value>
            <value>
                <fullName>Parental Custody</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement to Caregiver</fullName>
            </value>
            <value>
                <fullName>Delinquent - Committed to DJJ</fullName>
            </value>
            <value>
                <fullName>Delinquent - Committed to DSS and DJJ</fullName>
            </value>
            <value>
                <fullName>Shelter Care Order to DSS</fullName>
            </value>
            <value>
                <fullName>Shelter Care Order to Other</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement to DSS</fullName>
            </value>
            <value>
                <fullName>Order of Protective Supervision</fullName>
            </value>
            <value>
                <fullName>Final Decree of Adoption</fullName>
            </value>
            <value>
                <fullName>Rescission</fullName>
            </value>
            <value>
                <fullName>Committed to DHMH</fullName>
            </value>
            <value>
                <fullName>Caretaker (Non Relative) Custody and Guardianship</fullName>
            </value>
            <value>
                <fullName>Committed to DDA</fullName>
            </value>
            <value>
                <fullName>Child Emancipated via marriage or court order</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement - Child Disability</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement - Time Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>